--- a/project_view.html
+++ b/project_view.html
@@ -2,44 +2,42 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>BiblioIndex</title>
+    <title>الفهرس الليبي الموحد</title>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
         body { font-family: 'Times New Roman', serif; background: #eceef1; margin: 0; padding: 0; }
         .fixed-header { position: fixed; top: 0; left: 0; right: 0; background: #2c3e50; z-index: 1000; border-bottom: 2px solid #000; }
         .input-table { width: 100%; background: #cfcfcf; border-spacing: 2px; padding: 2px; table-layout: fixed; }
-        label { font-size: 9px; font-weight: bold; color: #333; display: block; text-align: center; }
-        input, select { width: 100%; height: 18px; font-size: 12px; border: 1px solid #999; text-align: right; background: #fff; }
-        .w-sm { width: 60px !important; }
+        label { font-size: 11px; font-weight: bold; color: #333; display: block; text-align: center; }
+        input, select { width: 100%; height: 28px; font-size: 14px; font-weight: bold; border: 1px solid #999; text-align: right; background: #fff; color: #000; }
+        .w-sm { width: 70px !important; }
         .smart-zone { background: #bdc3c7; padding: 5px; display: flex; gap: 5px; align-items: center; border-bottom: 1px solid #7f8c8d; }
         .actions { background: #cfcfcf; text-align: center; padding: 4px; display: flex; justify-content: center; gap: 4px; border-bottom: 2px solid #2c3e50; }
-        .btn { padding: 3px 8px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 10px; font-weight: bold; }
-        .scroll-area { margin-top: 225px; height: calc(100vh - 230px); overflow: auto; }
-        .admin-table { border-collapse: collapse; background: #fff; font-size: 11px; width: 100%; }
+        .btn { padding: 4px 12px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 12px; font-weight: bold; }
+        .scroll-area { margin-top: 265px; height: calc(100vh - 275px); overflow: auto; }
+        .admin-table { border-collapse: collapse; background: #fff; font-size: 12px; width: 100%; }
         .admin-table th { position: sticky; top: 0; background: #34495e; color: white; z-index: 100; padding: 5px; border: 1px solid #2c3e50; }
-        .admin-table td { border: 1px solid #ccc; padding: 5px; text-align: right; vertical-align: top; }
-        .btn-edit-row { background: #2980b9 !important; } 
-        .btn-del-row { background: #c0392b !important; }
+        .admin-table td { border: 1px solid #ccc; padding: 5px; text-align: right; }
+        .btn-edit-row { background: #2980b9 !important; } .btn-del-row { background: #c0392b !important; }
         #modalOverlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:2000; }
         .modal-content { background:white; width:90%; margin:1% auto; padding:25px; height: 90vh; overflow-y: auto; }
-        .close-fixed { position: fixed; top: 20px; left: 60px; background: #c0392b; color: white; border: none; padding: 8px 20px; z-index: 3000; cursor:pointer; }
+        .close-fixed { position: fixed; top: 20px; left: 60px; background: #c0392b; color: white; border: none; padding: 8px 20px; z-index: 3000; cursor:pointer; font-weight: bold; }
     </style>
 </head>
 <body>
 
 <div class="fixed-header">
     <div style="display:flex; justify-content:space-between; align-items:center; background:#34495e; color:white; padding:4px 15px;">
-        <strong style="font-size:12px;">BiblioIndex</strong>
+        <strong style="font-size:13px;">الفهرس الليبي الموحد</strong>
         <div style="display:flex; gap:6px;">
             <button onclick="document.getElementById('xlIn').click()" class="btn" style="background:#e67e22">📥 استيراد</button>
             <button onclick="exportX()" class="btn" style="background:#2980b9">💾 تصدير</button>
             <input type="file" id="xlIn" style="display:none" onchange="importX(event)">
             <button onclick="newP()" class="btn" style="background:#27ae60">+ مشروع</button>
-            <select id="pSel" onchange="switchP(this.value)" style="width:auto; height:22px;"></select>
+            <select id="pSel" onchange="switchP(this.value)" style="width:auto; height:24px; font-size:12px;"></select>
             <button onclick="delP()" class="btn" style="background:#c0392b">حذف المشروع</button>
         </div>
     </div>
-
     <form id="bForm">
         <datalist id="subjectsList"></datalist>
         <table class="input-table">
@@ -74,16 +72,14 @@
                 <td colspan="3"><label>محقق/مراجعة</label><input type="text" id="editor" class="in"></td>
             </tr>
         </table>
-        
         <div class="smart-zone">
-            <span style="font-size:10px; font-weight:bold;">لصق ذكي:</span>
-            <input type="text" id="smartInput" placeholder="الصق البيانات هنا مفصولة بـ (؛) أو (.) ثم اضغط توزيع" style="height:20px; font-size:11px;">
-            <button type="button" class="btn" style="background:#16a085; white-space:nowrap;" onclick="processSmart()">توزيع ذكي</button>
+            <span style="font-size:11px; font-weight:bold; color:#000;">لصق ذكي:</span>
+            <input type="text" id="smartInput" placeholder="الصق البيانات هنا..." style="height:24px; font-size:13px;">
+            <button type="button" class="btn" style="background:#16a085; height:24px;" onclick="processSmart()">توزيع ذكي</button>
         </div>
-
         <div class="actions">
             <button type="button" id="saveBtn" class="btn" style="background:#27ae60" onclick="save()">حفظ السجل</button>
-            <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">معاينة القائمة (14pt غامق)</button>
+            <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">المعاينة الببليوغرافية</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="idx('author', 'المؤلفين')">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#d35400" onclick="idx('title', 'العناوين')">كشاف العناوين</button>
             <button type="button" class="btn" style="background:#c0392b" onclick="idx('trans_idx', 'المترجمين')">كشاف المترجمين</button>
@@ -94,7 +90,6 @@
 </div>
 
 <div id="modalOverlay"><button onclick="closeM()" class="close-fixed">إغلاق</button><div class="modal-content" id="modalBody"></div></div>
-
 <div class="scroll-area"><table class="admin-table"><thead><tr><th>رقم</th><th>رأس الموضوع</th><th>البيانات</th><th>إجراء</th></tr></thead><tbody id="adminBody"></tbody></table></div>
 
 <script>
@@ -120,7 +115,7 @@ function draw() {
         let isRef = (r.see || r.see_also) && !r.title;
         let dNum = isRef ? '-' : entryCounter++;
         r.finalID = isRef ? null : dNum;
-        hBody += `<tr><td>${dNum}</td><td>${r.subject}</td><td>${r.author || ''} - ${r.title || 'إحالة'}</td><td><button class="btn btn-edit-row" onclick="edit(${i})">تعديل</button><button class="btn btn-del-row" onclick="deleteRec(${i})">حذف</button></td></tr>`;
+        hBody += `<tr><td>${dNum}</td><td>${r.subject}</td><td><b>${r.author || ''}</b> - ${r.title || 'إحالة'}</td><td><button class="btn btn-edit-row" onclick="edit(${i})">تعديل</button><button class="btn btn-del-row" onclick="deleteRec(${i})">حذف</button></td></tr>`;
     });
     document.getElementById('adminBody').innerHTML = hBody;
     document.getElementById('pSel').innerHTML = projs.map(p=>`<option ${p===curP?'selected':''}>${p}</option>`).join('');
@@ -152,10 +147,17 @@ function deleteRec(i) { if(confirm("حذف؟")) { recs.splice(i, 1); draw(); } }
 
 function openBiblioWindow() {
     const win = window.open('', '_blank');
-    let content = `<html dir="rtl"><head><title>المعاينة</title><style>body { font-family: 'Times New Roman', serif; padding: 40px; line-height: 1.6; font-size: 14pt; font-weight: bold; color: #000; } .preview-subject { background: #d1d1d1; text-align: center; padding: 5px; margin: 20px 0 10px 0; font-size: 16pt; border: 1px solid #000; } .entry { margin-bottom: 15px; border-bottom: 1px solid #eee; padding-bottom: 8px; }</style></head><body>`;
+    let content = `<html dir="rtl"><head><style>
+        body { font-family: 'Times New Roman', serif; padding: 40px; line-height: 1.6; color: #000; }
+        .preview-subject { background: #e0e0e0; text-align: center; padding: 6px; margin: 20px 0 10px 0; font-size: 14pt; font-weight: bold; border: 1px solid #999; }
+        .preview-ref { background: #f2f2f2; padding: 4px 15px; margin: 5px 0; font-size: 13pt; font-weight: bold; border-right: 5px solid #999; }
+        .entry { margin-bottom: 15px; padding-bottom: 8px; font-size: 13pt; font-weight: bold; border-bottom: 1px dashed #ccc; }
+    </style></head><body>`;
     let lastSub = '';
     recs.forEach((r) => {
         if (r.subject !== lastSub) { content += `<div class="preview-subject">${r.subject}</div>`; lastSub = r.subject; }
+        if (r.see) content += `<div class="preview-ref">انظر: ${r.see}</div>`;
+        if (r.see_also) content += `<div class="preview-ref">انظر أيضاً: ${r.see_also}</div>`;
         if (r.title) {
             let titleSep = (r.translator && !r.collab) ? " / " : ". - ";
             let resp = (r.author_preview || '') + (r.collab ? '، ' + r.collab : '') + (r.translator ? (r.collab ? '؛ ترجمة ' : 'ترجمة ') + r.translator : '');
@@ -169,9 +171,16 @@ function openBiblioWindow() {
 }
 
 function journalIdx() {
-    let map = {};
-    recs.forEach(r => { if(r.journal && r.finalID) { let key = r.journal + (r.affiliation ? ` (${r.affiliation})` : ""); if(!map[key]) map[key] = []; map[key].push(r.finalID); } });
-    let h = `<h3>قائمة المجلات (والتبعية)</h3><ul>`;
+    let map = {}, affilMap = {};
+    recs.forEach(r => { if(r.journal && r.affiliation) affilMap[r.journal] = r.affiliation; });
+    recs.forEach(r => { 
+        if(r.journal && r.finalID) { 
+            let aff = r.affiliation || affilMap[r.journal] || "";
+            let key = r.journal + (aff ? ` (${aff})` : ""); 
+            if(!map[key]) map[key] = []; map[key].push(r.finalID); 
+        } 
+    });
+    let h = `<h3>قائمة المجلات والتبعية</h3><ul>`;
     Object.keys(map).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar')).forEach(k => { h += `<li><b>${k}</b> - (${map[k].join(', ')})</li>`; });
     document.getElementById('modalBody').innerHTML = h + '</ul>'; document.getElementById('modalOverlay').style.display='block';
 }
@@ -186,10 +195,9 @@ function importX(e) {
     let f = e.target.files[0]; let rd = new FileReader();
     rd.onload = function(e) {
         let d = new Uint8Array(e.target.result); let wb = XLSX.read(d, {type:'array'});
-        recs = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]]); draw();
+        recs = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]]); draw(); alert("تم الاستيراد");
     }; rd.readAsArrayBuffer(f);
 }
-
 function exportX() { const ws = XLSX.utils.json_to_sheet(recs); const wb = XLSX.utils.book_new(); XLSX.utils.book_append_sheet(wb, ws, "Data"); XLSX.writeFile(wb, `Fahras_${curP}.xlsx`); }
 function closeM() { document.getElementById('modalOverlay').style.display='none'; }
 function newP() { let n = prompt("اسم المشروع:"); if(n) { projs.push(n); curP=n; recs=[]; draw(); } }
