--- a/project_view.html
+++ b/project_view.html
@@ -2,42 +2,44 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>الفهرس الليبي الموحد</title>
+    <title>ببليواندكس/title>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
         body { font-family: 'Times New Roman', serif; background: #eceef1; margin: 0; padding: 0; }
         .fixed-header { position: fixed; top: 0; left: 0; right: 0; background: #2c3e50; z-index: 1000; border-bottom: 2px solid #000; }
-        .input-table { width: 100%; background: #cfcfcf; border-spacing: 2px; padding: 2px; table-layout: fixed; }
-        label { font-size: 11px; font-weight: bold; color: #333; display: block; text-align: center; }
-        input, select { width: 100%; height: 28px; font-size: 14px; font-weight: bold; border: 1px solid #999; text-align: right; background: #fff; color: #000; }
-        .w-sm { width: 70px !important; }
-        .smart-zone { background: #bdc3c7; padding: 5px; display: flex; gap: 5px; align-items: center; border-bottom: 1px solid #7f8c8d; }
-        .actions { background: #cfcfcf; text-align: center; padding: 4px; display: flex; justify-content: center; gap: 4px; border-bottom: 2px solid #2c3e50; }
-        .btn { padding: 4px 12px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 12px; font-weight: bold; }
-        .scroll-area { margin-top: 265px; height: calc(100vh - 275px); overflow: auto; }
-        .admin-table { border-collapse: collapse; background: #fff; font-size: 12px; width: 100%; }
-        .admin-table th { position: sticky; top: 0; background: #34495e; color: white; z-index: 100; padding: 5px; border: 1px solid #2c3e50; }
-        .admin-table td { border: 1px solid #ccc; padding: 5px; text-align: right; }
-        .btn-edit-row { background: #2980b9 !important; } .btn-del-row { background: #c0392b !important; }
+        .input-table { width: 100%; background: #cfcfcf; border-spacing: 1px; padding: 1px; table-layout: fixed; }
+        label { font-size: 10px; font-weight: bold; color: #333; display: block; text-align: center; line-height: 1; margin-bottom: 1px; }
+        input, select { width: 100%; height: 22px; font-size: 12px; font-weight: bold; border: 1px solid #999; text-align: right; background: #fff; color: #000; }
+        .w-xs { width: 50px !important; }
+        .w-sm { width: 80px !important; }
+        .w-md { width: 120px !important; }
+        .smart-zone { background: #bdc3c7; padding: 3px 5px; display: flex; gap: 5px; align-items: center; border-bottom: 1px solid #7f8c8d; }
+        .actions { background: #cfcfcf; text-align: center; padding: 3px; display: flex; justify-content: center; gap: 4px; border-bottom: 2px solid #2c3e50; }
+        .btn { padding: 3px 10px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 11px; font-weight: bold; }
+        .scroll-area { margin-top: 215px; height: calc(100vh - 220px); overflow: auto; }
+        .admin-table { border-collapse: collapse; background: #fff; font-size: 11px; width: 100%; }
+        .admin-table th { position: sticky; top: 0; background: #34495e; color: white; z-index: 100; padding: 4px; border: 1px solid #2c3e50; }
+        .admin-table td { border: 1px solid #ccc; padding: 3px; text-align: right; }
         #modalOverlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:2000; }
-        .modal-content { background:white; width:90%; margin:1% auto; padding:25px; height: 90vh; overflow-y: auto; }
-        .close-fixed { position: fixed; top: 20px; left: 60px; background: #c0392b; color: white; border: none; padding: 8px 20px; z-index: 3000; cursor:pointer; font-weight: bold; }
+        .modal-content { background:white; width:90%; margin:1% auto; padding:20px; height: 90vh; overflow-y: auto; }
+        .close-fixed { position: fixed; top: 20px; left: 60px; background: #c0392b; color: white; border: none; padding: 8px 20px; z-index: 3000; cursor:pointer; }
     </style>
 </head>
 <body>
 
 <div class="fixed-header">
-    <div style="display:flex; justify-content:space-between; align-items:center; background:#34495e; color:white; padding:4px 15px;">
-        <strong style="font-size:13px;">الفهرس الليبي الموحد</strong>
-        <div style="display:flex; gap:6px;">
+    <div style="display:flex; justify-content:space-between; align-items:center; background:#34495e; color:white; padding:3px 15px;">
+        <strong style="font-size:12px;">ببليواندكس</strong>
+        <div style="display:flex; gap:5px;">
             <button onclick="document.getElementById('xlIn').click()" class="btn" style="background:#e67e22">📥 استيراد</button>
             <button onclick="exportX()" class="btn" style="background:#2980b9">💾 تصدير</button>
             <input type="file" id="xlIn" style="display:none" onchange="importX(event)">
             <button onclick="newP()" class="btn" style="background:#27ae60">+ مشروع</button>
-            <select id="pSel" onchange="switchP(this.value)" style="width:auto; height:24px; font-size:12px;"></select>
+            <select id="pSel" onchange="switchP(this.value)" style="width:auto; height:20px; font-size:11px;"></select>
             <button onclick="delP()" class="btn" style="background:#c0392b">حذف المشروع</button>
         </div>
     </div>
+
     <form id="bForm">
         <datalist id="subjectsList"></datalist>
         <table class="input-table">
@@ -45,46 +47,48 @@
                 <td><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subjectsList"></td>
                 <td><label>إحالة انظر</label><input type="text" id="see" class="in" list="subjectsList"></td>
                 <td><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in" list="subjectsList"></td>
-                <td><label>المؤلف (مقلوب)</label><input type="text" id="author" class="in"></td>
-                <td><label>المؤلف (للمعاينة)</label><input type="text" id="author_preview" class="in"></td>
-                <td><label>العنوان</label><input type="text" id="title" class="in"></td>
+                <td colspan="2"><label>المؤلف (مقلوب)</label><input type="text" id="author" class="in"></td>
             </tr>
             <tr>
-                <td><label>المشارك (للمعاينة)</label><input type="text" id="collab" class="in"></td>
-                <td><label>المشارك (للكشاف)</label><input type="text" id="collab_idx" class="in"></td>
-                <td><label>المترجم (للمعاينة)</label><input type="text" id="translator" class="in"></td>
-                <td><label>المترجم (للكشاف)</label><input type="text" id="trans_idx" class="in"></td>
+                <td colspan="2"><label>العنوان</label><input type="text" id="title" class="in"></td>
+                <td><label>مؤلف معاينة</label><input type="text" id="author_preview" class="in"></td>
+                <td><label>م.مشارك معاينة</label><input type="text" id="collab" class="in"></td>
+                <td><label>مشارك كشاف</label><input type="text" id="collab_idx" class="in"></td>
+            </tr>
+            <tr>
+                <td class="w-xs"><label>طبعة</label><input type="text" id="edition" class="in"></td>
                 <td><label>المجلة</label><input type="text" id="journal" class="in"></td>
-                <td><label>العدد (مج، ع، شهر)</label><input type="text" id="issue" class="in"></td>
-            </tr>
-            <tr>
-                <td><label>مكان النشر</label><input type="text" id="place" class="in"></td>
-                <td><label>التبعية/الجهة</label><input type="text" id="affiliation" class="in"></td>
+                <td class="w-sm"><label>العدد</label><input type="text" id="issue" class="in"></td>
+                <td><label>التبعية</label><input type="text" id="affiliation" class="in"></td>
+                <td class="w-md"><label>مكان النشر</label><input type="text" id="place" class="in"></td>
                 <td><label>الناشر</label><input type="text" id="publisher" class="in"></td>
-                <td class="w-sm"><label>طبعة</label><input type="text" id="edition" class="in"></td>
-                <td class="w-sm"><label>سنة</label><input type="text" id="year" class="in"></td>
-                <td class="w-sm"><label>صفحات</label><input type="text" id="pages" class="in"></td>
+                <td class="w-xs"><label>سنة</label><input type="text" id="year" class="in"></td>
+                <td class="w-xs"><label>صفحات</label><input type="text" id="pages" class="in"></td>
             </tr>
             <tr>
                 <td><label>السلسلة</label><input type="text" id="series" class="in"></td>
                 <td><label>العنوان الأصلي</label><input type="text" id="orig_title" class="in"></td>
-                <td><label>نوع المادة</label><input type="text" id="material_type" class="in"></td>
-                <td colspan="3"><label>محقق/مراجعة</label><input type="text" id="editor" class="in"></td>
+                <td class="w-md"><label>محقق/مراجعة</label><input type="text" id="editor" class="in"></td>
+                <td class="w-sm"><label>نوع المادة</label><input type="text" id="material_type" class="in"></td>
+                <td><label>مترجم معاينة</label><input type="text" id="translator" class="in"></td>
+                <td><label>مترجم كشاف</label><input type="text" id="trans_idx" class="in"></td>
             </tr>
         </table>
+        
         <div class="smart-zone">
-            <span style="font-size:11px; font-weight:bold; color:#000;">لصق ذكي:</span>
-            <input type="text" id="smartInput" placeholder="الصق البيانات هنا..." style="height:24px; font-size:13px;">
-            <button type="button" class="btn" style="background:#16a085; height:24px;" onclick="processSmart()">توزيع ذكي</button>
+            <span style="font-size:10px; font-weight:bold;">لصق ذكي:</span>
+            <input type="text" id="smartInput" placeholder="الصق البيانات هنا..." style="height:20px; font-size:12px;">
+            <button type="button" class="btn" style="background:#16a085" onclick="processSmart()">توزيع ذكي</button>
         </div>
+
         <div class="actions">
-            <button type="button" id="saveBtn" class="btn" style="background:#27ae60" onclick="save()">حفظ السجل</button>
-            <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">المعاينة الببليوغرافية</button>
+            <button type="button" id="saveBtn" class="btn" style="background:#27ae60" onclick="save()">حفظ</button>
+            <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">المعاينة</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="idx('author', 'المؤلفين')">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#d35400" onclick="idx('title', 'العناوين')">كشاف العناوين</button>
             <button type="button" class="btn" style="background:#c0392b" onclick="idx('trans_idx', 'المترجمين')">كشاف المترجمين</button>
-            <button type="button" class="btn" style="background:#16a085" onclick="journalIdx()">قائمة المجلات</button>
-            <button type="button" class="btn" style="background:#2980b9" onclick="idx('subject', 'الموضوعات')">رؤوس الموضوعات</button>
+            <button type="button" class="btn" style="background:#16a085" onclick="journalIdx()">المجلات</button>
+            <button type="button" class="btn" style="background:#2980b9" onclick="idx('subject', 'الموضوعات')">الموضوعات</button>
         </div>
     </form>
 </div>
@@ -115,7 +119,7 @@ function draw() {
         let isRef = (r.see || r.see_also) && !r.title;
         let dNum = isRef ? '-' : entryCounter++;
         r.finalID = isRef ? null : dNum;
-        hBody += `<tr><td>${dNum}</td><td>${r.subject}</td><td><b>${r.author || ''}</b> - ${r.title || 'إحالة'}</td><td><button class="btn btn-edit-row" onclick="edit(${i})">تعديل</button><button class="btn btn-del-row" onclick="deleteRec(${i})">حذف</button></td></tr>`;
+        hBody += `<tr><td>${dNum}</td><td>${r.subject}</td><td><b>${r.author || ''}</b> - ${r.title || 'إحالة'}</td><td><button class="btn" style="background:#2980b9" onclick="edit(${i})">تعديل</button><button class="btn" style="background:#c0392b" onclick="deleteRec(${i})">حذف</button></td></tr>`;
     });
     document.getElementById('adminBody').innerHTML = hBody;
     document.getElementById('pSel').innerHTML = projs.map(p=>`<option ${p===curP?'selected':''}>${p}</option>`).join('');
@@ -132,7 +136,7 @@ function processSmart() {
 function save() {
     let d = {}; document.querySelectorAll('.in').forEach(i => d[i.id] = i.value.trim());
     if(!d.subject) return alert("الرأس مطلوب");
-    if (editIndex > -1) { recs[editIndex] = d; editIndex = -1; document.getElementById('saveBtn').innerText = "حفظ السجل"; } 
+    if (editIndex > -1) { recs[editIndex] = d; editIndex = -1; document.getElementById('saveBtn').innerText = "حفظ"; } 
     else { recs.push(d); }
     draw(); document.getElementById('bForm').reset(); document.getElementById('subject').focus();
 }
@@ -140,7 +144,7 @@ function save() {
 function edit(i) {
     editIndex = i; let r = recs[i];
     document.querySelectorAll('.in').forEach(inp => inp.value = r[inp.id] || '');
-    document.getElementById('saveBtn').innerText = "تحديث السجل"; window.scrollTo(0,0);
+    document.getElementById('saveBtn').innerText = "تحديث"; window.scrollTo(0,0);
 }
 
 function deleteRec(i) { if(confirm("حذف؟")) { recs.splice(i, 1); draw(); } }
