--- a/project_view.html
+++ b/project_view.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>الفهرس الليبي الموحد</title>
+    <title>ببليواندكس</title>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
         body { font-family: 'Times New Roman', serif; background: #eceef1; margin: 0; padding: 0; overflow-x: hidden; }
@@ -47,10 +47,9 @@
     </div>
 
     <form id="bForm">
-        <datalist id="subjectsList"></datalist>
         <table class="input-table">
             <tr>
-                <td style="width:15%"><input type="text" id="subject" class="in" list="subjectsList" placeholder="رأس الموضوع"></td>
+                <td style="width:15%"><input type="text" id="subject" class="in" placeholder="رأس الموضوع"></td>
                 <td style="width:15%"><input type="text" id="see" class="in" placeholder="إحالة انظر"></td>
                 <td style="width:20%"><input type="text" id="see_also" class="in" placeholder="إحالة انظر أيضاً"></td>
                 <td style="width:25%"><input type="text" id="author_preview" class="in" placeholder="مؤلف معاينة"></td>
@@ -84,14 +83,14 @@
         <div class="smart-row">
             <input type="text" id="url" class="in" placeholder="الرابط (URL)" style="flex: 2;">
             <div style="width:1px; background:#999; height:15px;"></div>
-            <input type="text" id="smartInput" placeholder="لصق ذكي هنا للتوزيع..." style="flex: 1; font-size:10px; background:#f9f9f9;">
+            <input type="text" id="smartInput" placeholder="لصق ذكي هنا..." style="flex: 1; font-size:10px;">
             <button type="button" class="btn" style="background:#16a085" onclick="processSmart()">توزيع</button>
         </div>
 
         <div class="actions">
-            <button type="button" id="saveBtn" class="btn" style="background:#27ae60" onclick="save()">حفظ السجل</button>
+            <button type="button" class="btn" style="background:#27ae60" onclick="save()">حفظ السجل</button>
             <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">المعاينة</button>
-            <button type="button" class="btn" style="background:#2c3e50" onclick="runIdx('author', 'المؤلفين')">كشاف المؤلفين</button>
+            <button type="button" class="btn" style="background:#2c3e50" onclick="runAuthorIdx()">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#d35400" onclick="runIdx('title', 'العناوين')">كشاف العناوين</button>
             <button type="button" class="btn" style="background:#c0392b" onclick="runIdx('trans_idx', 'المترجمين')">كشاف المترجمين</button>
             <button type="button" class="btn" style="background:#16a085" onclick="journalIdx()">قائمة المجلات</button>
@@ -101,7 +100,7 @@
 </div>
 
 <div id="modalOverlay"><button onclick="closeM()" class="btn" style="background:#c0392b; margin:10px;">إغلاق</button><div class="modal-content" id="modalBody"></div></div>
-<div class="scroll-area"><table class="admin-table"><thead><tr><th style="width:30px;">رقم</th><th style="width:100px;">رأس الموضوع</th><th>البيانات البيبليوغرافية</th><th style="width:80px;">إجراء</th></tr></thead><tbody id="adminBody"></tbody></table></div>
+<div class="scroll-area"><table class="admin-table"><thead><tr><th style="width:30px;">رقم</th><th style="width:100px;">رأس الموضوع</th><th>البيانات</th><th style="width:80px;">إجراء</th></tr></thead><tbody id="adminBody"></tbody></table></div>
 
 <script>
 let projs = JSON.parse(localStorage.getItem('L_P')) || ['مشروع_1'];
@@ -126,24 +125,40 @@ function draw() {
     document.getElementById('pSel').innerHTML = projs.map(p=>`<option ${p===curP?'selected':''}>${p}</option>`).join('');
 }
 
+// تعديل خاص بكشاف المؤلفين لضمان أخذ الاسم كاملاً من خانة "المؤلف مقلوب"
+function runAuthorIdx() {
+    let m = {};
+    recs.forEach(r => {
+        if (r.author && r.finalID) {
+            // نأخذ القيمة كاملة من خانة "المؤلف (مقلوب)" دون تقسيمها بالفاصلة المنقوطة
+            let name = r.author.trim();
+            if (name) {
+                if (!m[name]) m[name] = [];
+                if (!m[name].includes(r.finalID)) m[name].push(r.finalID);
+            }
+        }
+    });
+    renderModalIdx(m, "المؤلفين");
+}
+
 function runIdx(f, l) {
     let m = {}; 
     recs.forEach(r => { 
         if(r[f] && r.finalID) {
-            // تحسين: استخراج الأسماء من خانة المؤلف مقلوب بشكل أدق
-            let rawNames = r[f].split(/[؛،]/);
-            rawNames.forEach(n => { 
-                n = n.trim(); 
-                if(n) { 
-                    if(!m[n]) m[n] = []; 
-                    if(!m[n].includes(r.finalID)) m[n].push(r.finalID); 
-                }
-            }); 
+            let val = r[f].trim();
+            if(val) {
+                if(!m[val]) m[val] = []; 
+                if(!m[val].includes(r.finalID)) m[val].push(r.finalID);
+            }
         }
     });
+    renderModalIdx(m, l);
+}
+
+function renderModalIdx(m, title) {
     let k = Object.keys(m).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar'));
     let groups = {}; k.forEach(x => { let c = cleanAL(x).charAt(0); if(!groups[c]) groups[c]=[]; groups[c].push({key:x, ids:m[x]}); });
-    let h = `<h3>كشاف ${l}</h3><div class="column-wrapper">`;
+    let h = `<h3>كشاف ${title}</h3><div class="column-wrapper">`;
     for(let c in groups) { h += `<div class="idx-group"><span class="idx-letter">${c}</span>` + groups[c].map(i => `<div class="idx-item"><b>${i.key}</b> (${i.ids.join(', ')})</div>`).join('') + `</div>`; }
     document.getElementById('modalBody').innerHTML = h + `</div>`; document.getElementById('modalOverlay').style.display='block';
 }
@@ -159,11 +174,7 @@ function journalIdx() {
             if(!m[k]) m[k]=[]; m[k].push(r.finalID); 
         }
     });
-    let k = Object.keys(m).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar'));
-    let groups = {}; k.forEach(x => { let c = cleanAL(x).charAt(0); if(!groups[c]) groups[c]=[]; groups[c].push({key:x, ids:m[x]}); });
-    let h = `<h3>قائمة المجلات والتبعية</h3><div class="column-wrapper">`;
-    for(let c in groups) { h += `<div class="idx-group"><span class="idx-letter">${c}</span>` + groups[c].map(i => `<div class="idx-item"><b>${i.key}</b> (${i.ids.join(', ')})</div>`).join('') + `</div>`; }
-    document.getElementById('modalBody').innerHTML = h + `</div>`; document.getElementById('modalOverlay').style.display='block';
+    renderModalIdx(m, "المجلات");
 }
 
 function openBiblioWindow() {
@@ -171,16 +182,16 @@ function openBiblioWindow() {
     let content = `<html dir="rtl"><head><style>
         body { font-family: 'Times New Roman', serif; padding: 30px; line-height: 1.4; }
         .sub { background: #e0e0e0; text-align: center; padding: 5px; margin: 15px 0 5px; font-size: 14pt; font-weight: bold; border: 1px solid #999; }
-        .ent { margin-bottom: 12px; font-size: 13pt; border-bottom: 1px dashed #ccc; padding-bottom: 5px; }
+        .ent { margin-bottom: 12px; font-size: 13pt; border-bottom: 1px dashed #ccc; padding-bottom: 10px; }
         .bold-title { font-weight: bold; }
-        .url-line { display: block; margin-top: 5px; color: blue; font-size: 11pt; text-decoration: none; }
+        .url-line { display: block; margin-top: 8px; color: blue; font-size: 11pt; border-top: 1px solid #eee; padding-top: 4px; }
     </style></head><body>`;
 
     let lastSub = '';
     recs.forEach(r => {
         if (r.subject !== lastSub) { content += `<div class="sub">${r.subject}</div>`; lastSub = r.subject; }
-        if (r.see) content += `<div style="margin-bottom:5px;">انظر: ${r.see}</div>`;
-        if (r.see_also) content += `<div style="margin-bottom:5px;">انظر أيضاً: ${r.see_also}</div>`;
+        if (r.see) content += `<div>انظر: ${r.see}</div>`;
+        if (r.see_also) content += `<div>انظر أيضاً: ${r.see_also}</div>`;
         
         if (r.title) {
             let titleClass = !r.author ? 'bold-title' : '';
@@ -191,7 +202,6 @@ function openBiblioWindow() {
             let line = `<b>${r.author || ''} (${r.finalID})</b><br><span class="${titleClass}">${r.title}</span>`;
             if(resp) line += ` / ${resp}`;
             if(r.edition) line += ` . ـــ ط. ${r.edition}`;
-            
             if(r.journal) {
                 line += ` . ـــ ${r.journal}${r.issue ? ' . ـــ ' + r.issue : ''}`;
             } else {
@@ -199,8 +209,8 @@ function openBiblioWindow() {
                 if(pInfo) line += ` . ـــ ${pInfo}`;
             }
             if(r.pages) line += ` . ـــ ${r.journal ? 'ص ' + r.pages : r.pages + ' ص'}`;
-            // إضافة الرابط في سطر منفرد في النهاية
-            if(r.url) line += `<a href="${r.url}" class="url-line" target="_blank">الرابط: ${r.url}</a>`;
+            // الرابط في سطر منفصل في النهاية
+            if(r.url) line += `<div class="url-line">الرابط: ${r.url}</div>`;
             content += `<div class="ent">${line}.</div>`;
         }
     });
